# gxen

./: .hg_archival.txt  Config.mk  README.md
linux-3.6.5/: .config  build.sh
linux-3.6.5/drivers/xen/xen-pciback/: pci_stub.c
tools/a3/: CMakeLists.txt  a3.h  a3_band_scheduler.cc  a3_band_scheduler.h  a3_bar1_channel.cc  a3_bar1_channel.h  a3_bar3_channel.cc  a3_bar3_channel.h  a3_barrier.cc  a3_barrier.h  a3_bench.h  a3_bit_mask.h  a3_channel.cc  a3_channel.h  a3_config.h  a3_context.cc  a3_context.h  a3_context_bar0.cc  a3_context_bar1.cc  a3_context_bar3.cc  a3_context_bar4.cc  a3_context_barrier.cc  a3_context_sched.cc  a3_credit_scheduler.cc  a3_credit_scheduler.h  a3_device.cc  a3_device.h  a3_device_bar1.cc  a3_device_bar1.h  a3_device_bar3.cc  a3_device_bar3.h  a3_device_table.cc  a3_direct_scheduler.cc  a3_direct_scheduler.h  a3_fake_channel.cc  a3_fake_channel.h  a3_fifo_scheduler.cc  a3_fifo_scheduler.h  a3_fire.cc  a3_fire.h  (+126 more)
tools/a3/client/: client.cc
tools/cross/: Makefile  cross  cross.h  cross_allocator.cc  cross_allocator.h  cross_barrier.cc  cross_barrier.h  cross_bit_mask.h  cross_channel.cc  cross_channel.h  cross_cmdline.h  cross_context.cc  cross_context.h  cross_context_bar0.cc  cross_context_bar1.cc  cross_context_bar3.cc  cross_context_barrier.cc  cross_device.cc  cross_device.h  cross_device_bar1.cc  cross_device_bar1.h  cross_device_table.cc  cross_device_table.h  cross_inttypes.h  cross_lock.h  cross_main.cc  cross_mmio.h  cross_page.cc  cross_page.h  cross_playlist.cc  cross_playlist.h  cross_poll_area.cc  cross_poll_area.h  cross_pramin.cc  cross_pramin.h  cross_registers.cc  cross_registers.h  cross_remapping.cc  cross_remapping.h  cross_session.h  (+9 more)
tools/cross/client/: client.cc
tools/libxc/: xc_domain.c  xenctrl.h
tools/libxl/: libxl_create.c  libxl_dm.c  libxl_internal.h  libxl_pci.c  libxl_types.idl  libxlu_cfg_y.c  xl_cmdimpl.c  xl_sxp.c
tools/python/xen/xend/: XendConfig.py  image.py
tools/python/xen/xm/: create.py
tools/qemu-xen/: Makefile.objs  configure  console.c  main-loop.c  main-loop.h  qapi-schema.json  qemu-timer.c  qemu-timer.h  qmp-commands.hx  savevm.c  vl.c  xen-all.c  xen-mapcache.c
tools/qemu-xen-traditional/: .gitignore  Makefile  Makefile.target  aio.c  block-bochs.c  block-cloop.c  block-cow.c  block-dmg.c  block-nbd.c  block-parallels.c  block-qcow.c  block-qcow2.c  block-raw-posix.c  block-raw-win32.c  block-vbd.c  block-vmdk.c  block-vpc.c  block-vvfat.c  block.c  block.h  block_int.h  bt-host.c  cache-utils.h  configure  console.c  console.h  cpu-all.h  curses.c  cutils.c  dma-helpers.c  elf_ops.h  exec-all.h  keymaps.c  loader.c  migration-exec.c  migration-tcp.c  monitor.c  nbd.c  net.c  net.h  (+35 more)
tools/qemu-xen-traditional/audio/: mixeng.c
tools/qemu-xen-traditional/darwin-user/: machload.c
tools/qemu-xen-traditional/hw/: battery_mgmt.c  battery_mgmt.h  boards.h  cirrus_vga.c  cirrus_vga_rop.h  cirrus_vga_rop2.h  dma.c  e1000.c  eepro100.c  iommu.c  lsi53c895a.c  mc146818rtc.c  mips_mipssim.c  mips_r4k.c  ne2000.c  nvc0.c  nvc0.h  nvc0_channel.c  nvc0_channel.h  nvc0_init.inc  nvc0_ioport.c  nvc0_vbios.inc  nvc0_vbios.rom  pass-through.c  pass-through.h  pc.c  pc.h  pci.c  pci.h  pci_emulation.c  pci_emulation.h  piix4acpi.c  piix_pci.c  pt-graphics.c  pt-msi.c  pt-msi.h  quadro6000.c  quadro6000.h  quadro6000_channel.c  quadro6000_channel.h  (+28 more)
tools/qemu-xen-traditional/hw/nvc0/: Makefile  cross.h  nvc0.c  nvc0.h  nvc0.mak  nvc0_api_bar4.cc  nvc0_api_bar4.h  nvc0_api_bar5.cc  nvc0_api_bar5.h  nvc0_array.h  nvc0_bit_mask.h  nvc0_channel.h  nvc0_context.cc  nvc0_context.h  nvc0_enable_if.h  nvc0_fifo.c  nvc0_fifo.cc  nvc0_fifo.h  nvc0_if.h  nvc0_init.inc  nvc0_inttypes.h  nvc0_ioport.c  nvc0_ioport.h  nvc0_main.c  nvc0_main.h  nvc0_memory.h  nvc0_mmio.c  nvc0_mmio.h  nvc0_mmio_bar0.c  nvc0_mmio_bar0.cc  nvc0_mmio_bar0.h  nvc0_mmio_bar1.c  nvc0_mmio_bar1.cc  nvc0_mmio_bar1.h  nvc0_mmio_bar3.c  nvc0_mmio_bar3.cc  nvc0_mmio_bar3.h  nvc0_mmio_bar4.cc  nvc0_mmio_bar4.h  nvc0_mmio_barrier.cc  (+26 more)
tools/qemu-xen-traditional/hw/nvc0/api/: bar4.cc  bar4.h  bar5.cc  bar5.h
tools/qemu-xen-traditional/i386-dm/: config.h  cpu.h  exec-dm.c  helper2.c  hooks.mak  hookslib.mak  hookstarget.mak  i8259.c  machine.c
tools/qemu-xen-traditional/i386-stubdom/: hooks.mak  hookslib.mak  hookstarget.mak
tools/qemu-xen-traditional/linux-user/: linuxload.c
tools/qemu-xen-traditional/tests/: Makefile  hello-arm.c  linux-test.c  qruncom.c  testthread.c
tools/qemu-xen/hw/: cirrus_vga.c  pc.c  xen_backend.c  xen_backend.h  xen_common.h  xen_disk.c  xen_machine_pv.c  xen_nic.c  xen_platform.c
tools/qemu-xen/slirp/: slirp.c
xen/arch/x86/: domctl.c
xen/include/public/: domctl.h
